--- a/src/app/pages/billings-and-payments/generate-bills/generate-bills.page.scss
+++ b/src/app/pages/billings-and-payments/generate-bills/generate-bills.page.scss
@@ -469,7 +469,7 @@ label {
 
   ion-card {
     width: 108%;
-    height: 1050px;
+    // height: 1050px;
 
     // right: 0;
     // top: 60px;
