--- a/src/app/pages/schools/schools.page.scss
+++ b/src/app/pages/schools/schools.page.scss
@@ -108,7 +108,7 @@ ion-button {
   position: relative;
   right: 86px;
   top: 30px;
-  box-sizing: border-box;
+  // box-sizing: border-box;
 
   border: 1px solid #ffffff;
 }
@@ -319,7 +319,7 @@ ion-button {
   }
   .table-container {
     width: 100%;
-    min-width: 80%;
+    // min-width: 80%;
   }
   .head-container {
     width: 101%;
